deploy2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment2
spec:
  selector:
    matchLabels:
      app: nginx_deploy2
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx_deploy2
    spec:
      containers:
        - name: nginx
          image: nginx:1.7.10
          ports:
            - containerPort: 80
