nginx-deployment-2-VS.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-deployment-2-vs
spec:
  hosts:
  - "sou.sarthusofts.com"
  gateways:
  - nginx-deployment-2-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx-deployment2
        port:
          number: 80
